@@ -5,6 +5,7 @@ These are the changes above perl-5.22.1 (i.e. 5.23.0)
 See pod/perlcperl.pod for a summary, but note that perlcperl includes also
 still in work features.
 
+  * Add Travis hooks: https://travis-ci.org/perl11/cperl
   * Do not fallback to u_ ops on 32bit.
   * installperl uses PERLNAME=cperl with -Dusecperl
   * installperl honors Configure -Dperlpath
